fix: add overflow-y property to settings menu for better scrolling behavior

--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -128,6 +128,7 @@ $block: '.#{variables.$ns}settings';
 
     &__menu {
         border-right: 1px solid var(--g-color-line-generic);
+        overflow-y: auto;
     }
 
     &__heading {
